@@ -1,6 +1,7 @@
 Version 3.4.4-devel
 -------------------
 - Add path_from_utf8.h header.
+- Add win_wmain_utf8.cpp source.
 
 
 Version 3.4.3 [24 Jun 2020]
